--- a/package.json
+++ b/package.json
@@ -9,6 +9,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^23.6.0"
+    "@types/jest": "^23.3.9",
+    "@types/node-fetch": "^2.1.4",
+    "@types/restify": "^7.2.6",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
+    "ts-loader": "^5.3.0",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.1.6",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "dependencies": {
+    "node-fetch": "^2.3.0",
+    "restify": "^7.2.3"
   }
 }
